// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return theme data for slug depart-de-lentreprise 1`] = `
Object {
  "breadcrumbs": Array [],
  "children": Array [
    Object {
      "label": "Documents à remettre au salarié",
      "slug": "documents-a-remettre-au-salarie",
    },
    Object {
      "label": "Démission",
      "slug": "demission",
    },
    Object {
      "label": "Fin d’un CDD - CTT",
      "slug": "fin-dun-cdd-ctt",
    },
    Object {
      "label": "Rupture conventionnelle",
      "slug": "rupture-conventionnelle",
    },
    Object {
      "label": "Licenciement : droits des salariés et procédures",
      "slug": "licenciement-droits-des-salaries-et-procedures",
    },
    Object {
      "label": "Retraite",
      "slug": "retraite",
    },
    Object {
      "label": "Autres départs",
      "slug": "autres-departs",
    },
  ],
  "description": "C’est la fin de votre contrat de travail, vous souhaitez rompre le contrat de travail d’un salarié et vous vous demandez quels sont les documents obligatoire à remettre ? Vous voulez démissionner, faire une rupture conventionnelle ou connaître les indemnités auxquelles vous avez droit ? Retrouvez toutes nos réponses ici. ",
  "position": 8,
  "refs": Array [
    Object {
      "title": "Rupture du contrat de travail à durée indéterminée (CDI)",
      "url": "/fiche-service-public/rupture-du-contrat-de-travail-a-duree-indeterminee-cdi",
    },
    Object {
      "title": "Arrêt maladie pendant le préavis : quelles conséquences ?",
      "url": "/contribution/arret-maladie-pendant-le-preavis-quelles-consequences",
    },
    Object {
      "title": "Peut-on garder la mutuelle de l'entreprise à la fin du contrat de travail ?",
      "url": "/fiche-service-public/peut-on-garder-la-mutuelle-de-lentreprise-a-la-fin-du-contrat-de-travail",
    },
    Object {
      "title": "Démission, licenciement : peut-on travailler ailleurs avant la fin du préavis ?",
      "url": "/fiche-service-public/demission-licenciement-peut-on-travailler-ailleurs-avant-la-fin-du-preavis",
    },
    Object {
      "title": "Indemnité compensatrice de préavis",
      "url": "/fiche-service-public/indemnite-compensatrice-de-preavis",
    },
    Object {
      "title": "Heures pour recherche d’emploi",
      "url": "/outils/heures-recherche-emploi",
    },
    Object {
      "title": "Indemnité compensatrice de congés payés",
      "url": "/fiche-service-public/indemnite-compensatrice-de-conges-payes",
    },
    Object {
      "title": "Le salarié peut-il s’absenter pour rechercher un emploi pendant son préavis ?",
      "url": "/contribution/le-salarie-peut-il-sabsenter-pour-rechercher-un-emploi-pendant-son-preavis",
    },
    Object {
      "title": "Quelles sont les conséquences du non-respect du préavis par le salarié ou l'employeur ?",
      "url": "/contribution/quelles-sont-les-consequences-du-non-respect-du-preavis-par-le-salarie-ou-lemployeur",
    },
    Object {
      "title": "Salarié sans papiers : quelles règles pour la rupture du contrat de travail ?",
      "url": "/fiche-service-public/salarie-sans-papiers-quelles-regles-pour-la-rupture-du-contrat-de-travail",
    },
  ],
  "slug": "depart-de-lentreprise",
  "title": "Départ de l’entreprise",
}
`;

exports[`return themes root themes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "label": "Embauche",
          "slug": "embauche",
        },
        Object {
          "label": "Contrat de travail",
          "slug": "contrat-de-travail",
        },
      ],
      "icon": "Contract",
      "position": 1,
      "slug": "embauche-et-contrat-de-travail",
      "title": "Embauche et contrat de travail",
    },
    Object {
      "children": Array [
        Object {
          "label": "Documents à remettre au salarié",
          "slug": "documents-a-remettre-au-salarie",
        },
        Object {
          "label": "Démission",
          "slug": "demission",
        },
        Object {
          "label": "Fin d’un CDD - CTT",
          "slug": "fin-dun-cdd-ctt",
        },
        Object {
          "label": "Rupture conventionnelle",
          "slug": "rupture-conventionnelle",
        },
        Object {
          "label": "Licenciement : droits des salariés et procédures",
          "slug": "licenciement-droits-des-salaries-et-procedures",
        },
        Object {
          "label": "Retraite",
          "slug": "retraite",
        },
        Object {
          "label": "Autres départs",
          "slug": "autres-departs",
        },
      ],
      "icon": "Depart",
      "position": 8,
      "slug": "depart-de-lentreprise",
      "title": "Départ de l’entreprise",
    },
  ],
}
`;
